# aa-video

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.cuda  Doxyfile  README.md
.devcontainer/: devcontainer.json  initialize.sh  post_attach.sh  post_create.sh
.github/: copilot-instructions.md
.github/workflows/: docker.yml  docs.yml
client/: CMakeLists.txt
client/include/: detector_client.h  rpc_client.h
client/include/aa/client/: video_client.h
client/src/: detector_client.cpp  main.cpp  video_client.cpp
include/: calculator.h
server/: CMakeLists.txt
server/include/: detector_server.h  detector_service.h  polygon_filter.h  rpc_server.h  yolo.h
server/include/aa/server/: video_server.h  video_service_impl.h
server/src/: detector_server.cpp  main.cpp  polygon_filter.cpp  video_server.cpp  video_service_impl.cpp  yolo.cpp
shared/: CMakeLists.txt
shared/include/: common.h  config.h  frame.h  logging.h  options.h  point.h  polygon.h  signal_set.h  types.h
shared/include/aa/shared/: config.h  frame_buffer.h  video_processor.h
shared/proto/: detector_service.proto  frame.proto  point.proto  polygon.proto  video_service.proto
shared/src/: common.cpp  config.cpp  frame.cpp  frame_buffer.cpp  logging.cpp  options.cpp  point.cpp  polygon.cpp  signal_set.cpp  video_processor.cpp
src/: calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_copy_move_semantics.cpp  test_detector_server.cpp  test_frame.cpp  test_options.cpp  test_polygon.cpp  test_polygon_filtering.cpp  test_signal_set.cpp
